Updated output folder of ppt tables

--- a/data/dsmc_report/dsmc_report_open.Rmd
+++ b/data/dsmc_report/dsmc_report_open.Rmd
@@ -89,7 +89,7 @@ add_table <- function(table){
             location = ph_location(left = left, top = 0))
   
   print(tables,
-        target = file.path(ppt_destination,'tables.pptx'))
+        target = file.path(output_data_dir,'open_tables.pptx'))
   
 }
 
