Updated Instructions in README after test

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,10 +25,17 @@ Sample reports are available [here.](https://github.com/jclutton/DSMC/tree/main/
 
 ## DISCLAIMER
 
-The consort diagrams in this project only support two group interventions. Only the CTCAE 5.0 classification is supported for adverse event reporting. You will need an API token to your REDCap project.
+-   The consort diagrams in this project only support two group interventions.
+
+-   Only the CTCAE 5.0 classification is supported for adverse event reporting.
+
+-   You will need an API token to your REDCap project.
+
+-   Not all tables output to the powerpoint
+
+-   There must be data in the REDCap database. If the project is missing data in key spots, the code will throw an errorl
 
 This project has not been thoroughly tested and might not work easily for your needs. It will require small updates to code and it might require extensive work. Please feel free to use it, as you see fit, to improve the efficiency of your study; however, if you'd like a fully tested and more easily implemented package, please follow along at <https://github.com/jclutton/dsmreport>. We hope to have the package available by fall 2024.
-
 
 ## Instructions for use
 
@@ -38,7 +45,9 @@ This project has not been thoroughly tested and might not work easily for your n
 
 2.  Extract the contents of the ZIP to where you plan to use the project. If your project might contain identifying information, be sure to use a secure drive.
 
-3.  Find the redcap_instruments folder in the DSMC folder
+3.  Change the folder name from DSMC-main to DSMC.
+
+4.  Find the redcap_instruments folder in the DSMC folder
 
     1.  Install the three instruments in your REDCap project. Do not change the names of any variables. You can change the labels to some field choices, as explained within each instrument.
 
@@ -68,17 +77,17 @@ This project has not been thoroughly tested and might not work easily for your n
      knitr::include_graphics('redcap_setup_example.PNG')
     ```
 
-4.  Get the API and and REDCap uri for your project. This will be a different process for every institution, so please follow your institution's guidelines.
+5.  Get the API and and REDCap uri for your project. This will be a different process for every institution, so please follow your institution's guidelines.
 
-5.  Download [R](https://www.r-project.org/) and [RStudio](https://posit.co/download/rstudio-desktop/)
+6.  Download [R](https://www.r-project.org/) and [RStudio](https://posit.co/download/rstudio-desktop/)
 
-6.  Open the DSMC.Rproj file in the DSMC folder. This will open a workspace.
+7.  Open the DSMC.Rproj file in the DSMC folder. This will open a workspace.
 
-7.  Open the master_script.R file
+8.  Open the master_script.R file
 
     1.  Select File -\> Open File -\> R -\> master_script.R
 
-8.  Edit the necessary information at the top of the script
+9.  Edit the necessary information at the top of the script
 
     -   redcap_uri
 
@@ -90,9 +99,9 @@ This project has not been thoroughly tested and might not work easily for your n
 
     -   drive_dir (parent folder to where DSMC is saved)
 
-9.  Source the master_script.R and fix any issues
+10. Source the master_script.R and fix any issues
 
-10. The open and closed reports will be in the data\\output folder
+11. The open and closed reports will be in the data\\output folder
 
 ```{r image, echo=FALSE, warning=FALSE, message=FALSE}
 knitr::include_graphics('amia_poster_cic_2024_jc20240508.png')
